Fixed project filter select text overflow. Changed contact box input line color.

--- a/src/assets/scss/components/_contact-box.scss
+++ b/src/assets/scss/components/_contact-box.scss
@@ -145,7 +145,7 @@
             width: 1px;
             height: 100%;
             opacity: 0.5;
-            background: var(--font-dark);
+            background: var(--primary);
             border-radius: $border-radius-default 0 0 $border-radius-default;
         }
     }
